# rust-word-count

./: .gitignore  Cargo.toml  arm-results.txt  notes.txt  perf2dat.py  profile.sh  profile_build.sh  profile_para.sh  profile_picobench.sh  profile_stats.sh  rebuild.sh  wp.c
code-snipits/: parallel_code  pico-code  sequential-code  simple_code
rustwp/: .gitignore  Cargo.toml
rustwp/src/: main.rs
src/: async_read.rs  global_context.rs  instrumented_fold.rs  instrumented_map.rs  lib.rs  log_histogram.rs  logging.rs  parallel_pipeline.rs  probe_stream.rs  selective_context.rs  stream_fork.rs  stream_fork_chunked.rs  stream_group_by.rs  stream_join.rs  stream_shuffle.rs  stream_shuffle_buffered.rs  util.rs  word_count_async.rs  word_count_async_buf.rs  word_count_new_parallel.rs  word_count_new_parallel_shuffle.rs  word_count_para.rs  word_count_para_buf.rs  word_count_para_chunked.rs  word_count_para_fine.rs  word_count_para_partition.rs  word_count_para_partition_buf.rs  word_count_para_partition_chunked.rs  word_count_para_partition_shuffle.rs  word_count_para_partition_shuffle_chunked.rs  word_count_seq.rs  word_count_seq_buf.rs  word_count_timely.rs
