[package]
name = "word-count"
version = "0.1.0"
authors = [ "Stefan Sydow <stefan.sydow@tu-berlin.de>" ]
edition = "2018"

[[bin]]
name = "wc-seq"
path = "src/word_count_seq.rs"

[[bin]]
name = "wc-async"
path = "src/word_count_async.rs"

[[bin]]
name = "wc-parallel"
path = "src/word_count_para.rs"

[[bin]]
name = "wc-parallel-fine"
path = "src/word_count_para_fine.rs"

[[bin]]
name = "wc-parallel-chunked"
path = "src/word_count_para_chunked.rs"


#[[bin]]
#name = "wc-timely"
#path = "src/word_count_timely.rs"

[dependencies]
argparse = "0.2"
log = "0.4"
simplelog = "0.6"
tokio = "0.1"
futures = "0.1"
#void = "1.0"
#chrono = "0.4"
#byteorder = "1.3"
#geo = "0.12"
bytes = "0.4"
#rand = "0.7"
#rand_pcg = "0.2"
#arrayref = "0.3"
#num-traits = "0.2"
#num-derive = "0.2"
#itertools = "0.8"
#timely = "0.10"

[profile.release]
debug = true
#lto = false
