[package]
name = "word-count"
version = "0.1.0"
authors = [ "Stefan Sydow <stefan.sydow@tu-berlin.de>" ]
edition = "2018"

[[bin]]
name = "wc-seq"
path = "src/word_count_seq.rs"

[[bin]]
name = "wc-seq-buf"
path = "src/word_count_seq_buf.rs"

[[bin]]
name = "wc-async"
path = "src/word_count_async.rs"

[[bin]]
name = "wc-async-buf"
path = "src/word_count_async_buf.rs"

[[bin]]
name = "wc-parallel"
path = "src/word_count_para.rs"

[[bin]]
name = "wc-parallel-fine"
path = "src/word_count_para_fine.rs"

[[bin]]
name = "wc-parallel-chunked"
path = "src/word_count_para_chunked.rs"

[[bin]]
name = "wc-parallel-buf"
path = "src/word_count_para_buf.rs"

[[bin]]
name = "wc-parallel-partition"
path = "src/word_count_para_partition.rs"

[[bin]]
name = "wc-parallel-partition-chunked"
path = "src/word_count_para_partition_chunked.rs"

[[bin]]
name = "wc-parallel-partition-buf"
path = "src/word_count_para_partition_buf.rs"

#[[bin]]
#name = "wc-timely"
#path = "src/word_count_timely.rs"

[workspace]
exclude = [
    "rustwp",
]

[dependencies]
argparse = "0.2"
log = "0.4"
simplelog = "0.7"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
#timely = "0.10"

[profile.release]
debug = true
#lto = false
