[package]
name = "word-count"
version = "0.2.0"
authors = [ "Stefan Sydow <stefan.sydow@tu-berlin.de>" ]
edition = "2018"

[[bin]]
name = "wc-seq"
path = "src/word_count_seq.rs"

[[bin]]
name = "wc-seq-buf"
path = "src/word_count_seq_buf.rs"

#[[bin]]
#name = "wc-async"
#path = "src/word_count_async.rs"

[[bin]]
name = "wc-async-buf"
path = "src/word_count_async_buf.rs"

#[[bin]]
#name = "wc-parallel"
#path = "src/word_count_para.rs"

#[[bin]]
#name = "wc-parallel-fine"
#path = "src/word_count_para_fine.rs"

#[[bin]]
#name = "wc-parallel-chunked"
#path = "src/word_count_para_chunked.rs"

#[[bin]]
#name = "wc-parallel-buf"
#path = "src/word_count_para_buf.rs"

#[[bin]]
#name = "wc-parallel-partition"
#path = "src/word_count_para_partition.rs"

#[[bin]]
#name = "wc-parallel-partition-chunked"
#path = "src/word_count_para_partition_chunked.rs"

#[[bin]]
#name = "wc-parallel-partition-buf"
#path = "src/word_count_para_partition_buf.rs"

#[[bin]]
#name = "wc-parallel-partition-shuffle"
#path = "src/word_count_para_partition_shuffle.rs"

#[[bin]]
#name = "wc-parallel-partition-shuffle-chunked"
#path = "src/word_count_para_partition_shuffle_chunked.rs"

[[bin]]
name = "wc-parallel-new"
path = "src/word_count_new_parallel.rs"

[[bin]]
name = "wc-parallel-shuffle-new"
path = "src/word_count_new_parallel_shuffle.rs"

#[[bin]]
#name = "wc-timely"
#path = "src/word_count_timely.rs"

[[bin]]
name = "async-read"
path = "src/async_read.rs"

[workspace]
exclude = [
    "rustwp",
]

[dependencies]
argparse = "0.2"
log = "0.4"
simplelog = "0.7"
#tokio = "0.1"
#tokio-io = "0.1"
futures = "0.1"
bytes = "0.4"
libc = "0.2"
#timely = "0.10"
parallel-stream = {git = "ssh://git@gitlab.tubit.tu-berlin.de/stefan.sydow/parallel-stream-rs.git"}
#parallel-stream = {git = "file:///home/st/thesis/code/parallel-stream"}

[dependencies.tokio]
version = "0.1"
default-features = false
#default features = ["codec", "fs", "io", "reactor", "rt-full", "sync", "tcp", "timer", "udp", "uds"]
features = ["codec", "fs", "io", "rt-full", "sync"]

[profile.release]
lto= "fat"
opt-level = 3
#debug = 1
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = 2
